[package]
name = "coinmarket_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.7"
error-chain = "0.12.4"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.72"
ctrlc = "3.2.1"
notify-rust = "4.5.5"